@@ -12,6 +12,8 @@ python-apt (0.9.0) UNRELEASED; urgency=low
     - Document correct use of uniq and hide it using __all__ (Closes: #723815)
   * python/apt_pkgmodule.cc:
     - Fix documentation of version_compare (Closes: #680891)
+  * apt/package.py:
+    - Add a Package.has_config_files property (Closes: #712749)
 
   [ Jeremy Bicha ]
   * data/templates/Ubuntu.info.in: add 'devel' series (Closes: #722961)
